# gruebot

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  action.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
src/gruebot/: __main__.py  config.py  main.py
src/gruebot/backends/: __init__.py  base.py  glulx.py  mud.py  zmachine.py
src/gruebot/llm/: __init__.py  anthropic_api.py  claude_cli.py  protocol.py
src/gruebot/logging/: __init__.py  transcript.py
src/gruebot/memory/: __init__.py  context.py  summarizer.py
src/gruebot/testing/: __init__.py  assertions.py  runner.py  types.py
src/ifplayer/: __init__.py  __main__.py  config.py  main.py
src/ifplayer/backends/: __init__.py  glulx.py  protocol.py  zmachine.py
src/ifplayer/llm/: __init__.py  anthropic_api.py  claude_cli.py  prompts.py
src/ifplayer/logging/: __init__.py  transcript.py
src/ifplayer/memory/: __init__.py  context.py  summarizer.py
tests/: __init__.py  test_backends.py  test_config.py  test_llm.py  test_logging.py  test_main.py  test_memory.py  test_testing.py
